# gracidea

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md
src/: CMakeLists.txt  api.h  cli.c  cli.cpp  cli.h  gracidea.c  gracidea.cpp
src/rs/: CMakeLists.txt  Makefile  api.c  api.cpp  api.h  cmake_install.cmake  core.cpp  core.h  data.c  data.cpp  data.h  rs.c  rs.cpp  rs.h  util.c  util.cpp  util.h
